<resources>
    <string name="app_name">KampusOnline</string>
    <string name="action_settings">Settings</string>

    <string name="label_warning">Warning</string>
    <string name="label_message_apps_requirement">This app requires read phone state permission to run properly.</string>
    <string name="label_show_permission">Show permission</string>
    <string name="label_close_app">Close Apps</string>

    <!--Login Activity-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_login">Login</string>
    <string name="label_message_valid_email">Email is valid</string>
    <string name="label_message_unvalid_email">Email is invalid!</string>
    <string name="label_message_email_required">Email is required</string>
    <string name="label_message_password_required">Password is required!</string>
    <string name="label_message_password_incorrect">Password is incorrect!</string>
    <string name="label_message_email_password_not_match">Email and Password don\'t match</string>
    <string name="message_authentication_failed">Authentication failed</string>

    <string name="label_logout">Logout</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Dashboard-->
    <string name="title_dashboard_fragment">Dashboard</string>
    <string name="label_kode_etik">Kode Etik Mahasiswa</string>
    <string name="label_panduan_akademik">Buku Panduan Akademik</string>
    <string name="label_panduan_skpi">Panduan Pengisian SKPI</string>
    <string name="label_panduan_keuangan">Buku Panduan Keuangan Reg A</string>
    <string name="label_panduan_blog">Buku Panduan Blog</string>
    <string name="label_panduan_ikad">Panduan Ikad</string>
    <string name="label_download_frs">Download Manual FRS Online</string>
    <string name="label_download">Download</string>
    <string-array name="label_dashboard_array">
        <item>@string/label_kode_etik</item>
        <item>@string/label_panduan_akademik</item>
        <item>@string/label_panduan_skpi</item>
        <item>@string/label_panduan_keuangan</item>
        <item>@string/label_panduan_blog</item>
        <item>@string/label_panduan_ikad</item>
    </string-array>
    <drawable name="icon_error">@drawable/ic_error</drawable>
    <integer-array name="list_dashboard_img_items">
        <item>@drawable/img_dashboard_kode_etik</item>
        <item>@drawable/img_dashboard_panduan_akademik</item>
        <item>@drawable/img_dashboard_panduan_skpi</item>
        <item>@drawable/img_dashboard_panduan_keuangan</item>
        <item>@drawable/img_dashboard_panduan_blog</item>
        <item>@drawable/img_dashboard_panduan_ikad</item>
    </integer-array>
    <string-array name="pdf_items">
        <item>pdf/kode_etik_mahasiswa.pdf</item>
        <item>pdf/panduan_akademik.pdf</item>
        <item>pdf/panduan_skpi.pdf</item>
        <item>pdf/panduan_keuangan.pdf</item>
        <item>pdf/panduan_blog.pdf</item>
        <item>pdf/panduan_ikad.pdf</item>
    </string-array>
    <string name="label_belum_isi_frs">Anda belum mengisi FRS</string>
    <string name="label_jadwal_berwalian">Jadwal Perwalian</string>

    <!--Hasil Studi-->
    <string name="title_hasil_studi_fragment">Hasil Studi</string>
    <string name="label_number">No</string>
    <string name="label_kode">Kode</string>
    <string name="label_mata_kuliah">Mata Kuliah</string>
    <string name="label_sks">SKS</string>
    <string name="label_nilai">Nilai</string>
    <string-array name="label_semester_array">
        <item>GANJIL - 2012/2013</item>
        <item>GENAP - 2012/2013</item>
        <!--<item>GANJIL - 2013/2014</item>-->
    </string-array>

    <!--Jadwal Kuliah-->
    <string name="title_jadwal_fragment">Jadwal</string>
    <string name="title_kuliah_fragment">Kuliah</string>
    <string name="title_ujian_fragment">Ujian</string>
    <string name="title_penggangti_fragment">Pengganti</string>
    <string name="title_susulan_fragment">Susulan</string>
    <string name="text_jadwal">Jadwal %s</string>

    <!--Jadwal Pengganti-->
    <string name="label_ditiadakan">Ditiadakan</string>
    <string name="label_pengganti">Pengganti</string>

    <string name="title_keuangan_fragment">Keuangan</string>

    <!--Rencana Studi-->
    <string name="title_rencana_studi_fragment">Rencana Studi</string>
    <string name="label_tahun_akademik">Tahun Akademik</string>
    <string name="label_ipk_sks">IPK terakhir</string>
    <string name="label_sks_matkul">Jatah SKS</string>
    <string name="label_jatah_sks">%s SKS</string>

    <string name="title_message_loading">Loading . . .</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_submit">Submit</string>
    <string name="label_message_success_submit_frs">E-Form Rencana Studi anda telah dikirim</string>
    <string name="label_message_success_save_doc">Document berhasil disimpan</string>

    <string name="label_save_to_pdf">Save to PDF</string>
</resources>
