<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.hasilstudi.HasilStudiFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <Spinner
            android:id="@+id/semesterSpinner"
            android:layout_width="220dp"
            android:layout_height="35dp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/label_number"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_small_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="center"
                    android:text="@string/label_kode"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_small_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="55"
                    android:gravity="center"
                    android:text="@string/label_mata_kuliah"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_small_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/label_sks"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_small_14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNilai"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/label_nilai"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_small_14"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHasilStudi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>